testdata/golden/invalid/syntax/invalid_units.cm
# CalcMark Invalid Unit Syntax Tests

This file tests invalid number + unit combinations.

---

## Missing Components

### Number without unit (ambiguous - could be just a number)
# These are likely valid as numbers, not quantities
# 10
# 5.5
# 12k

### Unit without number (invalid - just an identifier)
meters
kg
feet
pounds

---

## Invalid Separators

### No space (lexer should handle as multiplier or error)
10meters
5kg
100feet

### Multiple spaces
10  meters
5   kg

### Tabs
10	meters

### Other separators
10-meters
5_kg
100.feet
25,pounds

---

## Invalid Number Formats

### Multiple decimal points
1.2.3 meters
4.5.6 kg

### Invalid scientific notation
1e meters
2e+ kg
3e- feet

### Leading/trailing operators
+10 meters
10+ meters
-5- kg

---

## Invalid Unit Names

### Reserved keywords as units (if any)
10 if
5 then
2 else
3 for
1 while

### Operators as units (should fail)
10 +
5 -
2 *
3 /

### Numbers as units
10 5
5 123
2 456

---

## Type Mismatches in Expressions

### String + unit (if strings exist)
# "hello" meters

### Boolean + unit
true meters
false kg

### Function result + unit (complex)
# avg() meters

---

## Invalid Arithmetic with Units

### Incompatible unit operations
10 meters + 5 kg
5 feet - 2 pounds
100 miles * 50 km

### Unit + pure number (might be valid semantically)
10 meters + 5
5 kg - 2

### Unit division by unit (dimensional analysis)
10 meters / 5 meters
100 kg / 50 kg

---

## Currency Code Edge Cases

### Invalid currency codes (not 3 letters)
100 US
50 EURO
25 GB
1000 DOLLAR

### Currency code with lowercase
100 usd
50 eur

### Currency code with mixed case
100 Usd
50 eUr

### Currency code with numbers
100 US1
50 E2R

---

## Multiplier Edge Cases

### Double multipliers
12kk meters
1MM kg
5BB feet

### Multiplier without number
k meters
M kg
B feet

### Multiplier in wrong position
meters 12k
kg 1M

### Invalid multiplier letters
12x meters
5y kg
10z feet

---

## Complex Invalid Cases

### Multiple units
10 meters feet
5 kg pounds
100 miles km

### Unit + unit
meters feet
kg pounds

### Nested units
10 (meters)
5 [kg]

### Unit in wrong expression context
x = meters
y = kg 10
z = 5 + feet
